force-app/main/default/objects/ProjectServiceAttribute__c/ProjectServiceAttribute__c.object-meta.xml
<CustomObject>
    <description>Relates a Service Attribute to a Project Service and prepopulates default values. Service Attribute is related to Service, Project Service Attribute, and Attribute.</description>
    <label>Project Service Attribute</label>
    <nameField>
        <displayFormat>PSA-{00000000}</displayFormat>
        <label>Project Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>