force-app/main/default/objects/ProjectServiceAttribute__c/fields/AttachmentExt__c.field-meta.xml
<CustomField>
    <fullName>AttachmentExt__c</fullName>
    <label>Attachment Ext</label>
    <length>100</length>
    <type>Text</type>
</CustomField>