force-app/main/default/objects/ProjectServiceAttribute__c/fields/AttachmentURL__c.field-meta.xml
<CustomField>
    <fullName>AttachmentURL__c</fullName>
    <label>Attachment URL</label>
    <type>Url</type>
</CustomField>