force-app/main/default/objects/ProjectServiceAttribute__c/fields/AttchFileName__c.field-meta.xml
<CustomField>
    <fullName>AttchFileName__c</fullName>
    <label>AttchFileName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>