force-app/main/default/objects/ProjectServiceAttribute__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Project Service Attributes</relationshipLabel>
    <relationshipName>Project_Service_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>