force-app/main/default/objects/ProjectServiceAttribute__c/fields/Attributename__c.field-meta.xml
<CustomField>
    <fullName>Attributename__c</fullName>
    <formula>Attribute__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Name</label>
    <type>Text</type>
</CustomField>