force-app/main/default/objects/ProjectServiceAttribute__c/fields/AttributeNumber__c.field-meta.xml
<CustomField>
    <fullName>AttributeNumber__c</fullName>
    <formula>ServiceAttribute__r.AttributeNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Number</label>
    <type>Text</type>
</CustomField>