force-app/main/default/objects/ProjectServiceAttribute__c/fields/AttributeOrder__c.field-meta.xml
<CustomField>
    <fullName>AttributeOrder__c</fullName>
    <formula>ServiceAttribute__r.AttributeOrder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>