force-app/main/default/objects/ProjectServiceAttribute__c/fields/AttributeValue__c.field-meta.xml
<CustomField>
    <fullName>AttributeValue__c</fullName>
    <label>Attribute Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>