force-app/main/default/objects/ProjectServiceAttribute__c/fields/IsClonedAttachment__c.field-meta.xml
<CustomField>
    <fullName>IsClonedAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Cloned Attachment</label>
    <type>Checkbox</type>
</CustomField>