force-app/main/default/objects/ProjectServiceAttribute__c/fields/ProjectService__c.field-meta.xml
<CustomField>
    <fullName>ProjectService__c</fullName>
    <label>Project Service</label>
    <referenceTo>ProjectService__c</referenceTo>
    <relationshipLabel>Project Service Attributes</relationshipLabel>
    <relationshipName>Project_Service_Attributes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>