force-app/main/default/objects/ProjectServiceAttribute__c/fields/ServiceAttribute__c.field-meta.xml
<CustomField>
    <fullName>ServiceAttribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Attribute</label>
    <referenceTo>ServiceAttribute__c</referenceTo>
    <relationshipLabel>Project Service Attributes</relationshipLabel>
    <relationshipName>Project_Service_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>